<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
    </group>

    <item android:title="Friends">
        <menu>
            <item
            android:id="@+id/nav_add_friend"
            android:icon="@drawable/ic_person_add"
            android:title="Add friend" />
            <item
                android:id="@+id/nav_view_friends"
                android:icon="@drawable/ic_view_friends"
                android:title="View friends" />
        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_coffeeFinder"
                android:icon="@drawable/ic_cafe"
                android:title="Coffee Finder" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
